--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     <input class="mdl-textfield__input" type="text" id="input">
                     <label class="mdl-textfield__label" for="input">Text...</label>
                 </div>
+                <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
+                    <i class="material-icons">add</i>
+                </button>
             </form>
         </div>
     </div>
