--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
 
 <body>
     <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--4-col">
+        <div class="mdl-cell mdl-cell--3-col">
             <form action="#">
                 <div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="input">
                     <label class="mdl-textfield__label" for="input">Text...</label>
                 </div>
-                <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
-                    <i class="material-icons">add</i>
-                </button>
             </form>
+        </div>
+        <div class="mdl-cell mdl-cell--1-col">
+            <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
+                <i class="material-icons">add</i>
+            </button>
         </div>
     </div>
 
