--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--3-col">
+        <div class="mdl-cell mdl-cell--stretch">
             <form action="#">
-                <div class="mdl-textfield mdl-js-textfield">
+                <div class="mdl-textfield mdl-js-textfield" style="width:100%;">
                     <input class="mdl-textfield__input" type="text" id="input">
                     <label class="mdl-textfield__label" for="input">Text...</label>
                 </div>
