--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--stretch">
+        <div class="mdl-cell mdl-cell--3-col">
             <form action="#">
                 <div class="mdl-textfield mdl-js-textfield" style="width:100%;">
                     <input class="mdl-textfield__input" type="text" id="input">
