--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </form>
         </div>
         <div class="mdl-cell mdl-cell--1-col">
-            <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
+            <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab" onclick="close()">
                 <i class="material-icons">add</i>
             </button>
         </div>
@@ -29,6 +29,7 @@
 
     <!-- SCRIPTS -->
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script defer src="./js/main.js"></script>
 </body>
 
 </html>
